fix(partners-news-section): spacing

--- a/src/3_blocks/partner-news-section/style.scss
+++ b/src/3_blocks/partner-news-section/style.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: var(--spacing-64);
+  gap: var(--spacing-48);
   padding: var(--spacing-64) var(--spacing-16);
 
   width: 100%;
